--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,18 @@
     padding: 0;
 }
 
+ul {
+    list-style: none;
+    margin: auto;
+}
+
+.uv {
+    width: 20%;
+    background-color: orangered;
+    margin: .9rem auto;
+    border-radius: 20px;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -21,7 +33,9 @@ header {
 }
 
 .card {
-    /* width: 100rem; */
+    width: 10rem;
+    box-shadow: 22px 6px 24px 12px rgba(0, 0, 0, 0.37);
+    border: 0;
 }
 
 .searchItem {
@@ -66,17 +80,18 @@ main {
 } */
 
 .fiveDayForecast {
+    /* width: 100vw; */
     /* margin: 0 auto; */
-}
-
-.item2 {
-    margin: 0 auto;
-    width: 100%;
+    /* border: 10px solid purple; */
 }
 
 .card-deck {
-    width: 800vw;
+    width: 100vw;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* flex-direction: column; */
 }
 
 .second-header {
@@ -86,11 +101,11 @@ main {
 .search-history {
     position: absolute;
     margin-left: 5rem;
-    width: 30%;
-    top: -230px;
+    width: 40%;
+    top: -170px;
     right: 500px;
     text-align: center;
-    /* border: 10px solid tan; */
+    border: 10px solid tan;
 }
 
 #searches {
@@ -109,14 +124,20 @@ main {
 }
 
 .currentCity {
-    width: 30%;
+    width: 20%;
     margin: 0 auto 2rem;
+    display: none;
     /* border: 10px solid orangered; */
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
 }
 
 .card-deck {
     /* border: 10px solid greenyellow; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    margin-top: 5rem;
 }
 
 .bi {
