--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ main {
     top: -170px;
     right: 500px;
     text-align: center;
-    border: 10px solid tan;
+    /* border: 10px solid tan; */
 }
 
 #searches {
