--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ header {
 
 .fiveDayForecast {
     width: 100vw;
-    margin: 0 auto;
+    margin: 0 auto 20rem auto;
     border: 10px solid purple;
 }
 
