--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ header {
 
 .card-deck {
     width: 100vw;
-    margin: 0 0 0 10rem;
+    margin: 5rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
